Solved number 4, OK solution so far, went pretty smooth and got a decently free solution that isn't constricted to the number of pairs per row. Kinda want to do tests first, it would've been satisfactory on this assignment.

--- a/aoc2022/aoc2022/aoc2022.csproj
+++ b/aoc2022/aoc2022/aoc2022.csproj
@@ -23,6 +23,12 @@
     <None Update="3\exampleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="4\4_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="4\exampleInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
