Solved number 5, more code and a bit more tricky file input. Prob. should've gone for an interface for the crane to make it prettier but meh, it'll do for now.

--- a/aoc2022/aoc2022/aoc2022.csproj
+++ b/aoc2022/aoc2022/aoc2022.csproj
@@ -29,6 +29,12 @@
     <None Update="4\exampleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="5\5_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="5\exampleInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
