Number 6 done, was pretty easy once I changed into queue from a weird Span-attempt.

--- a/aoc2022/aoc2022/aoc2022.csproj
+++ b/aoc2022/aoc2022/aoc2022.csproj
@@ -35,6 +35,12 @@
     <None Update="5\exampleInput.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="6\6_input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="6\exampleInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
